chore: wsdlvalidator addon
Refs: XRDDEV-2798

--- a/src/security-server/admin-service/application/src/test/resources/application.yml
+++ b/src/security-server/admin-service/application/src/test/resources/application.yml
@@ -76,7 +76,10 @@ xroad:
     strict-identifier-checks: true
     request-size-limit-regular: 50KB
     request-size-limit-binary-upload: 10MB
-
+    addon:
+      wsdl-validator:
+        enabled: true
+        command: src/test/resources/validator/mock-wsdlvalidator.sh
 file-upload-endpoints:
   endpoint-definitions:
     -
