--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -68,6 +68,10 @@ xroad:
     strict-identifier-checks: true
     request-size-limit-regular: 50KB
     request-size-limit-binary-upload: 10MB
+    addon:
+      wsdl-validator:
+        enabled: true
+        command: /usr/share/xroad/wsdlvalidator/bin/wsdlvalidator_wrapper.sh
   common:
     serverconf:
       cache-period: 60
