chore: add initial ds components to k8. Disabled by default.

--- a/development/security-server-k8/deployment/charts/openbao_init/templates/job.yaml
+++ b/development/security-server-k8/deployment/charts/openbao_init/templates/job.yaml
@@ -61,6 +61,10 @@ spec:
               value: {{ .Values.databaseCredentials.messageLog.username | quote }}
             - name: MESSAGELOG_PASSWORD
               value: {{ .Values.databaseCredentials.messageLog.password | quote }}
+            - name: DS_USERNAME
+              value: {{ .Values.databaseCredentials.ds.username | quote }}
+            - name: DS_PASSWORD
+              value: {{ .Values.databaseCredentials.ds.password | quote }}
           volumeMounts:
             - name: init-script
               mountPath: /scripts
