--- a/ansible/group_vars/cs_servers/lxd.yml
+++ b/ansible/group_vars/cs_servers/lxd.yml
@@ -1,7 +1,16 @@
+#CS should support at most 5 instances. Keep port gaps of 5 between each mapping.
 container_ports:
   frontend_cs:
     connect: "tcp:127.0.0.1:4000"
     listen: "tcp:0.0.0.0:{{ 3000 + (groups['cs_servers'].index(inventory_hostname) * 100) }}"
+    type: proxy
+  http_cs:
+    connect: "tcp:127.0.0.1:80"
+    listen: "tcp:0.0.0.0:{{ 3010 + (groups['cs_servers'].index(inventory_hostname) * 100) }}"
+    type: proxy
+  https_cs:
+    connect: "tcp:127.0.0.1:443"
+    listen: "tcp:0.0.0.0:{{ 3015 + (groups['cs_servers'].index(inventory_hostname) * 100) }}"
     type: proxy
   database_cs:
     connect: "tcp:127.0.0.1:5432"
