--- a/ansible/group_vars/ca_servers/lxd.yml
+++ b/ansible/group_vars/ca_servers/lxd.yml
@@ -3,3 +3,11 @@ container_ports:
     connect: "tcp:127.0.0.1:4000"
     listen: "tcp:0.0.0.0:4001"
     type: proxy
+  port8888:
+    connect: "tcp:127.0.0.1:8888"
+    listen: "tcp:0.0.0.0:4002"
+    type: proxy
+  port8899:
+    connect: "tcp:127.0.0.1:8899"
+    listen: "tcp:0.0.0.0:4003"
+    type: proxy
