--- a/ansible/group_vars/cs_servers/lxd.yml
+++ b/ansible/group_vars/cs_servers/lxd.yml
@@ -16,6 +16,14 @@ container_ports:
     connect: "tcp:127.0.0.1:5432"
     listen: "tcp:0.0.0.0:{{ 3020 + (groups['cs_servers'].index(inventory_hostname) * 100) }}"
     type: proxy
+  registration_cs:
+    connect: "tcp:127.0.0.1:4001"
+    listen: "tcp:0.0.0.0:{{ 3030 + (groups['cs_servers'].index(inventory_hostname) * 100) }}"
+    type: proxy
+  management_cs:
+    connect: "tcp:127.0.0.1:4002"
+    listen: "tcp:0.0.0.0:{{ 3035 + (groups['cs_servers'].index(inventory_hostname) * 100) }}"
+    type: proxy
   mailpit_cs:
     connect: "tcp:127.0.0.1:8025"
     listen: "tcp:0.0.0.0:{{ 3089 + (groups['cs_servers'].index(inventory_hostname) * 100) }}"
