--- a/development/security-server-k8/deployment/charts/security_server/values.yaml
+++ b/development/security-server-k8/deployment/charts/security_server/values.yaml
@@ -70,7 +70,6 @@ services:
       XROAD_SECRET_STORE_HOST: "openbao.ss.svc.cluster.local"
       XROAD_SECRET_STORE_SCHEME: "http"
       XROAD_SECRET_STORE_SKIP_SSL: "true"
-      LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_CLOUD_KUBERNETES: "TRACE"
     envFromSecrets:
       - name: "XROAD_SECRET_STORE_TOKEN"
         secretName: "xroad-token"
@@ -114,6 +113,8 @@ services:
         name: http
       - port: 5567
         name: grpc
+      - port: 8443
+        name: proxy-http
     serviceAccount:
       annotations: { }
     env:
@@ -125,7 +126,7 @@ services:
       - name: "XROAD_SECRET_STORE_TOKEN"
         secretName: "xroad-token"
         key: "XROAD_SECRET_STORE_TOKEN"
-  ui:
+  proxy-ui-api:
     image: xroad-ss-ui:latest
     imagePullPolicy: Never
     resources:
@@ -142,7 +143,7 @@ services:
     env:
       SERVER_PORT: "4000"
       DEBUG_PORT: "9999"
-      XROAD_HOST: "ui.ss.svc.cluster.local"
+      XROAD_HOST: "proxy-ui-api.ss.svc.cluster.local"
       XROAD_SECRET_STORE_HOST: "openbao.ss.svc.cluster.local"
       XROAD_SECRET_STORE_SCHEME: "http"
     envFromSecrets:
