chore: pump ansible centos_releasever to 9

--- a/ansible/roles/init-lxd/tasks/main.yml
+++ b/ansible/roles/init-lxd/tasks/main.yml
@@ -27,7 +27,7 @@
     source:
       type: image
       mode: pull
-      server: https://images.linuxcontainers.org
+      server: https://images.lxd.canonical.com
       protocol: simplestreams
       alias: centos/{{centos_releasever}}{{ (centos_releasever|int > 7) | ternary('-Stream', '') }}/{{ arch[ansible_architecture] }}
     profiles: [ "default" ]
