--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -72,8 +72,8 @@ xroad:
     signing-key-algorithm: RSA
     addon:
       wsdl-validator:
-        enabled: true
-        command: /usr/share/xroad/wsdlvalidator/bin/wsdlvalidator_wrapper.sh
+        enabled: false
+        command: /usr/share/xroad/wsdl-validator/bin/wsdlvalidator_wrapper.sh
   common:
     serverconf:
       cache-period: 60
