chore: add internal.p12 temporary init.
Refs: XRDDEV-2808

--- a/development/security-server-k8/deployment/charts/security_server/values.yaml
+++ b/development/security-server-k8/deployment/charts/security_server/values.yaml
@@ -3,6 +3,11 @@ global:
   environment: dev
   dataSpacesEnabled: false
 
+#TODO for now this purely for temporary cert init
+serviceAccount:
+  name: "ss-init-sa"
+  create: true
+
 init:
   serverconf:
     image: xroad-ss-serverconf-init:latest
