chore: minor fixes
Refs: XRDDEV-2798

--- a/src/signer/core/build.gradle
+++ b/src/signer/core/build.gradle
@@ -78,6 +78,7 @@ xjc.dependsOn createDirs
 compileJava.dependsOn xjc
 
 tasks.register('intTest', Test) {
+    dependsOn(':signer:application:bootJar')
     useJUnitPlatform()
 
     setDescription("Runs integration tests.")
