--- a/src/security-server/ds/runtime/data-plane/build.gradle
+++ b/src/security-server/ds/runtime/data-plane/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
     // x-road extensions
     implementation(project(":security-server:ds:extensions:common:xroad-jsonld"))
+    implementation(project(":security-server:ds:extensions:data-plane:xroad-policy"))
     implementation(project(":security-server:ds:extensions:data-plane:xroad-messagelog"))
     implementation(project(":security-server:ds:extensions:data-plane:xroad-data-plane-public-api"))
     implementation(project(":security-server:ds:extensions:data-plane:xroad-data-plane-iam"))
