--- a/development/hurl/scenarios/k8-ss2/vars.env
+++ b/development/hurl/scenarios/k8-ss2/vars.env
@@ -5,6 +5,9 @@ ca_port=4002
 
 ss2_host=localhost
 
+ss0_host=localhost
+ss0_port=3200
+
 example_service_wsdl=http://issoap:8080/example-adapter/Endpoint?wsdl
 example_service_address=http://issoap:8080/example-adapter/Endpoint
 
