--- a/development/security-server-k8/deployment/charts/security_server/values.yaml
+++ b/development/security-server-k8/deployment/charts/security_server/values.yaml
@@ -131,6 +131,14 @@ services:
       - name: "XROAD_SECRET_STORE_TOKEN"
         secretName: "xroad-token"
         key: "XROAD_SECRET_STORE_TOKEN"
+    volumeMounts:
+      - name: ssl-certs
+        mountPath: /etc/xroad/ssl
+        readOnly: false
+    volumes:
+      - name: ssl-certs
+        persistentVolumeClaim:
+          claimName: ss-ssl-certs
   proxy-ui-api:
     image: xroad-ss-ui:latest
     imagePullPolicy: Never
@@ -155,6 +163,14 @@ services:
       - name: "XROAD_SECRET_STORE_TOKEN"
         secretName: "xroad-token"
         key: "XROAD_SECRET_STORE_TOKEN"
+    volumeMounts:
+      - name: ssl-certs
+        mountPath: /etc/xroad/ssl
+        readOnly: false
+    volumes:
+      - name: ssl-certs
+        persistentVolumeClaim:
+          claimName: ss-ssl-certs
   messagelog-archiver:
     image: xroad-ss-messagelog-archiver:latest
     imagePullPolicy: Never
