--- a/src/security-server/admin-service/application/src/main/resources/permissions.yml
+++ b/src/security-server/admin-service/application/src/main/resources/permissions.yml
@@ -99,6 +99,7 @@
 - view_security_servers: [XROAD_SECURITY_OFFICER, XROAD_SYSTEM_ADMINISTRATOR, XROAD_REGISTRATION_OFFICER, XROAD_SERVICE_ADMINISTRATOR, XROAD_SECURITYSERVER_OBSERVER]
 - backup_configuration: [XROAD_SYSTEM_ADMINISTRATOR]
 - diagnostics: [XROAD_SYSTEM_ADMINISTRATOR, XROAD_SECURITYSERVER_OBSERVER]
+-   download_system_info: [XROAD_SYSTEM_ADMINISTRATOR]
 - restore_configuration: [XROAD_SYSTEM_ADMINISTRATOR]
 - view_version: [XROAD_SECURITY_OFFICER, XROAD_SYSTEM_ADMINISTRATOR, XROAD_REGISTRATION_OFFICER, XROAD_SERVICE_ADMINISTRATOR, XROAD_SECURITYSERVER_OBSERVER]
 - view_node_type: [XROAD_SECURITY_OFFICER, XROAD_SYSTEM_ADMINISTRATOR, XROAD_REGISTRATION_OFFICER, XROAD_SERVICE_ADMINISTRATOR, XROAD_SECURITYSERVER_OBSERVER]
