--- a/src/packages/src/xroad/common/op-monitor/etc/xroad/services/opmonitor.conf
+++ b/src/packages/src/xroad/common/op-monitor/etc/xroad/services/opmonitor.conf
@@ -7,7 +7,7 @@
 
 CUSTOM_OPMON_PARAMS="$XROAD_OPMON_PARAMS"
 
-CP="/usr/share/xroad/jlib/op-monitor-daemon-1.0.jar"
+CP="/usr/share/xroad/jlib/op-monitor-daemon.jar"
 
 XROAD_OPMON_PARAMS=" -Xms50m -Xmx256m -XX:MaxMetaspaceSize=80m \
 -Dlogback.configurationFile=/etc/xroad/conf.d/op-monitor-logback.xml $XROAD_OPMON_PARAMS"
