chore: drop springframework references from commons

--- a/src/addons/messagelog/messagelog-archiver/core/build.gradle
+++ b/src/addons/messagelog/messagelog-archiver/core/build.gradle
@@ -3,6 +3,9 @@ plugins {
 }
 
 dependencies {
+    api(platform(libs.springBoot.bom))
+
+    api('org.springframework:spring-context-support')
     api(project(':common:common-messagelog'))
 
     implementation(project(':common:common-scheduler'))
