--- a/src/op-monitor-daemon/core/build.gradle
+++ b/src/op-monitor-daemon/core/build.gradle
@@ -16,6 +16,7 @@ sourceSets {
 }
 
 dependencies {
+    api(platform(libs.springBoot.bom))
     implementation libs.jakarta.validationApi
     implementation libs.bundles.metrics
 
@@ -27,7 +28,7 @@ dependencies {
     implementation project(':common:common-op-monitoring')
 
     implementation("org.springframework.boot:spring-boot-starter")
-
+    api('org.springframework:spring-context-support')
     // Using HSQLDB for an in-memory database in tests.
     testImplementation libs.hsqldb
     testImplementation libs.mockito.core
