--- a/src/common/common-core/build.gradle
+++ b/src/common/common-core/build.gradle
@@ -9,7 +9,6 @@ plugins {
  */
 dependencies {
     api(platform(libs.jackson.bom))
-    api(platform(libs.springBoot.bom))
 
     api("com.fasterxml.jackson.core:jackson-databind")
     api("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
@@ -31,12 +30,11 @@ dependencies {
     api(libs.jakarta.bindApi)
     api(libs.jakarta.soapApi)
     api(libs.jakarta.servletApi)
+    api(libs.jakarta.annotationApi)
+
     api(libs.opentelemetry.instrumentation.annotations)
 
     implementation(libs.logback.classic)
-
-    api('org.springframework:spring-context')
-    api('org.springframework:spring-context-support')
 
     testImplementation project(':common:common-test')
 }
