--- a/src/common/common-test/build.gradle
+++ b/src/common/common-test/build.gradle
@@ -3,6 +3,7 @@ plugins {
 }
 
 dependencies {
+    api(platform(libs.springBoot.bom))
     implementation(project(':common:common-message'))
     implementation(project(':common:common-globalconf'))
     implementation(project(':common:common-keyconf'))
