chore: removing add-on packages, enabling defaults in application.yaml
Refs: XRDDEV-2798

--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -72,7 +72,7 @@ xroad:
     signing-key-algorithm: RSA
     addon:
       wsdl-validator:
-        enabled: false
+        enabled: true
         command: /usr/share/xroad/wsdl-validator/bin/wsdlvalidator_wrapper.sh
   common:
     serverconf:
