--- a/src/security-server/admin-service/application/src/test/resources/application.yml
+++ b/src/security-server/admin-service/application/src/test/resources/application.yml
@@ -78,6 +78,10 @@ xroad:
     request-size-limit-binary-upload: 10MB
     authentication-key-algorithm: RSA
     signing-key-algorithm: RSA
+    addon:
+      wsdl-validator:
+        enabled: true
+        command: src/test/resources/validator/mock-wsdlvalidator.sh
 
 file-upload-endpoints:
   endpoint-definitions:
