--- a/src/addons/proxymonitor/metaservice/build.gradle
+++ b/src/addons/proxymonitor/metaservice/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'java'
-    alias(libs.plugins.shadow)
 }
 
 project.ext.schemaTargetDir = layout.buildDirectory.dir("generated-sources").get().asFile
@@ -39,22 +38,6 @@ tasks.register('createDirs') {
     }
 }
 
-jar {
-    enabled = false
-}
-
-shadowJar {
-    archiveClassifier = ''
-    exclude('**/module-info.class')
-    dependencies {
-        include(project(':addons:proxymonitor-common'))
-        include(project(':monitor-common'))
-    }
-    mergeServiceFiles()
-}
-
-build.dependsOn shadowJar
-
 compileJava.dependsOn processResources
 
 tasks.register('runProxymonitorMetaserviceTest', JavaExec) {
@@ -74,7 +57,7 @@ tasks.register('runProxymonitorMetaserviceTest', JavaExec) {
         '-Dxroad.proxy.client-connector-so-linger=-1',
         '-Dxroad.proxy.client-httpclient-so-linger=-1',
         '-Dxroad.proxy.server-connector-so-linger=-1',
-        '-Dxroad.proxy.serverServiceHandlers=ee.ria.xroad.proxy.serverproxy.ProxyMonitorServiceHandlerImpl',
+        '-Dxroad.proxy.addon.proxymonitor.enabled=true',
         '-Dxroad.proxy.grpc-tls-enabled=false',
         '-Dtest.queries.dir=src/test/queries'
 
