--- a/src/proxy/application/build.gradle
+++ b/src/proxy/application/build.gradle
@@ -10,8 +10,16 @@ dependencies {
     implementation(project(':common:common-core'))
     implementation(project(':common:common-rpc'))
 
+    implementation(libs.apache.httpclient)
+    implementation(project(':common:common-keyconf'))
     implementation(project(':common:common-messagelog'))
+    implementation(project(':common:common-op-monitoring'))
+    implementation(project(':serverconf'))
+    implementation(project(':addons:metaservice'))
+    implementation(project(':addons:messagelog:messagelog-addon:asic'))
     implementation(project(':addons:messagelog:messagelog-addon:core'))
+    implementation(project(':addons:proxymonitor-metaservice'))
+    implementation(project(':addons:op-monitoring'))
 
     testImplementation(libs.hsqldb)
     testImplementation(libs.restAssured)
@@ -19,11 +27,9 @@ dependencies {
     testImplementation(project(':common:common-domain'))
     testImplementation(project(':common:common-globalconf'))
     testImplementation(project(':common:common-jetty'))
-    testImplementation(project(':common:common-keyconf'))
     testImplementation(project(':common:common-message'))
     testImplementation(project(':common:common-test'))
     testImplementation(project(':common:common-verifier'))
-    testImplementation(project(':serverconf'))
     testImplementation(project(':security-server:ds-client'))
     testImplementation(project(path: ":proxy:core", configuration: 'testArtifacts'))
 
